after some major changes especially viewport attributes

--- a/index.html
+++ b/index.html
@@ -45,22 +45,24 @@
             </ul>
         </div>
 
-        <footer id="footer1">
-            <h5>Nigeria</h5>
-        </footer>
+        <div id="footer-cont">
+            <footer id="footer1">
+                <h5>Nigeria</h5>
+            </footer>
 
-        <footer id="footer2">
-            <ul id="footer2-list">
-                <li><a href="#"><h5>About</h5></a></li>
-                <li><a href="#"><h5>Advertising</h5></a></li>
-                <li><a href="#"><h5>Business</h5></a></li>
-                <li><a href="#"><h5>How search works</h5></a></li>
-                <li><a href="#"><h5>Carbon neutral since 2007</h5></a></li>
-                <li><a href="#"><h5>Privacy</h5></a></li>
-                <li><a href="#"><h5>Terms</h5></a></li>
-                <li><a href="#"><h5>Settings</h5></a></li>
-            </ul>
-        </footer>
+            <footer id="footer2">
+                <ul id="footer2-list">
+                    <li><a href="#"><h5>About</h5></a></li>
+                    <li><a href="#"><h5>Advertising</h5></a></li>
+                    <li><a href="#"><h5>Business</h5></a></li>
+                    <li><a href="#"><h5>How search works</h5></a></li>
+                    <li><a href="#"><h5>Carbon neutral since 2007</h5></a></li>
+                    <li><a href="#"><h5>Privacy</h5></a></li>
+                    <li><a href="#"><h5>Terms</h5></a></li>
+                    <li><a href="#"><h5>Settings</h5></a></li>
+                </ul>
+            </footer>
+        </div>
 
     </div>
     
