--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         
         <a id="nav-text-links" href="#">Gmail</a>
         <a id="nav-text-links" href="#">Images</a>
-        <a id="nav-icon" href="#" ><i  class="fa fa-car" style="font-size: 20px;color: black;"></i></a>
+        <a id="nav-icon" href="#" ><img id="menu-img" src="./menu.png"></a>
         <a class="nav-img"><img id="nav-img" src="https://wallpaperaccess.com/full/2786694.jpg"></a>
         
     </navbar>
@@ -38,10 +38,10 @@
         <div id="lang-cont">
             <ul class="lang-options">
                 <li><h5 id="lang-title">Google offered in: </h5></li>
-                <li id="lang-links"><a href="#">Hausa</a></li>
-                <li id="lang-links"><a href="#">Igbo</a></li>
-                <li id="lang-links"><a href="#">Yoruba</a></li>
-                <li id="lang-links"><a href="#">Nigerian pidgin</a></li>
+                <li><a id="lang-links" href="#">Hausa</a></li>
+                <li><a id="lang-links" href="#">Igbo</a></li>
+                <li><a id="lang-links" href="#">Ese Yoruba</a></li>
+                <li><a id="lang-links" href="#">Nigerian pidgin</a></li>
             </ul>
         </div>
 
@@ -51,16 +51,26 @@
             </footer>
 
             <footer id="footer2">
-                <ul id="footer2-list">
-                    <li><a href="#"><h5>About</h5></a></li>
-                    <li><a href="#"><h5>Advertising</h5></a></li>
-                    <li><a href="#"><h5>Business</h5></a></li>
-                    <li><a href="#"><h5>How search works</h5></a></li>
-                    <li><a href="#"><h5>Carbon neutral since 2007</h5></a></li>
-                    <li><a href="#"><h5>Privacy</h5></a></li>
-                    <li><a href="#"><h5>Terms</h5></a></li>
-                    <li><a href="#"><h5>Settings</h5></a></li>
-                </ul>
+                <div >
+                    <ul id="f2p1">
+                        <li><a id="footer-links-left" href="#"><h5>About</h5></a></li>
+                        <li><a id="footer-links-left" href="#"><h5>Advertising</h5></a></li>
+                        <li><a id="footer-links-left" href="#"><h5>Business</h5></a></li>
+                        <li><a id="footer-links-left" href="#"><h5>How search works</h5></a></li>
+                    </ul>
+                </div>
+                <div>
+                    <ul id="f2p2">
+                        <li><a id="footer-links" href="#"><h5>Carbon neutral since 2007</h5></a></li>
+                    </ul>
+                </div>
+                <div>
+                    <ul id="f2p3">
+                        <li><a id="footer-links-right" href="#"><h5>Privacy</h5></a></li>
+                        <li><a id="footer-links-right" href="#"><h5>Terms</h5></a></li>
+                        <li><a id="footer-links-right" href="#"><h5>Settings</h5></a></li>
+                    </ul>
+                </div>
             </footer>
         </div>
 
