finally done with responsiveness..

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div id="search-bar-cont">
             <span>
             <a id="search-icon" href="#"><i class="fa fa-search"></i></a>
-            <input id="search-bar" type="text">
+            <input id="search-bar" type="text" autofocus>
             <a id="voice-icon" href="#"><i class="fa fa-microphone" ></i></a></span>
         </div>
 
